--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:image" content="https://mediatoolshub.com/og-image.jpg">
     <title>MediaToolsHub - Free Online Tools for Images, Videos, PDFs & Writing</title>
     <link rel="canonical" href="https://mediatoolshub.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" ="https://fonts.googleapis.com">
+    <link rel="preconnect" ="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID" crossorigin="anonymous"></script>
@@ -592,7 +592,7 @@
                 </div>
                 <h3>Image Compressor</h3>
                 <p>Reduce image file size without losing quality</p>
-                <a href="/image-compressor" class="tool-link">Use Tool</a>
+                <a href="/free_tools/img_compressor" class="tool-link">Use Tool</a>
             </div>
             <div class="tool-card">
                 <div class="tool-icon">
