--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                 </div>
                 <h3>Image Compressor</h3>
                 <p>Reduce image file size without losing quality</p>
-                <a href="/free_tools/img_compressor" class="tool-link">Use Tool</a>
+                <a href="/free_tools/img_compressor.html" class="tool-link">Use Tool</a>
             </div>
             <div class="tool-card">
                 <div class="tool-icon">
