--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 </div>
                 <h3>Background Remover</h3>
                 <p>Remove backgrounds from images automatically</p>
-                <a href="/background-remover" class="tool-link">Use Tool</a>
+                <a href="/rree_tools/bg_remover.html" class="tool-link">Use Tool</a>
             </div>
         </div>
     </div>
